--- a/week-1/profile-app/src/app/app.component.html
+++ b/week-1/profile-app/src/app/app.component.html
@@ -20,7 +20,8 @@
 
   <h2> {{ assignment }}</h2>
 
-  <div class="row">
+  <div class="row" *ngIf="isLoggedIn; else showError">
+
     <div class="col-sm-4">
       <app-my-image></app-my-image>
     </div>
@@ -28,5 +29,16 @@
     <div class="col-sm-8">
       <app-my-details></app-my-details>
     </div>
+
   </div>
+  <ng-template #showError>
+
+    <div class='row'>
+      <div class='col-sm-12'>
+        <h4 class='alert alert-danger'>
+        You are not authorized to view this content.
+        </h4>
+      </div>
+    </div>
+  </ng-template>
 </div>
