--- a/week-1/profile-app/src/app/my-details/my-details.component.html
+++ b/week-1/profile-app/src/app/my-details/my-details.component.html
@@ -1,5 +1,14 @@
 <ul class="list-group">
-  <li class="list-group-item">Name: Zachary Dahir</li>
-  <li class="list-group-item">Favorite Food: Chicken Fried Rice</li>
-  <li class="list-group-item">Favorite Color: Green</li>
+  <li class="list-group-item">Name: {{ myProfile.fullName }}</li>
+  <li class="list-group-item">Favorite Food: {{ myProfile.favoriteFood }}</li>
+  <li class="list-group-item">Favorite Color: {{ myProfile.favoriteColor}}</li>
+  <li class="list-group-item">
+    Keywords:
+    <span *ngFor="let word of myProfile.keywords">
+      {{ word }}
+    </span>
+  </li>
 </ul>
+
+
+
